# naptha-node

./: .env.example  .gitignore  Dockerfile-mcp  Dockerfile-mpc  Dockerfile-node  Dockerfile-node-dev  README.md  clean_pyproject.py  docker-compose.development.yml  docker-compose.yml  launch.sh  pyproject.toml  stop_service.sh
.github/: deploy-readme.md
.github/workflows/: build-node-container.yml  build.yml  canary.yml  deploy-a100.yml  deploy-ec2.yml  deploy.yml  launch-node.yml  sdk-tests.yml  test.yml
docs/: advanced.md  docker.md
node/: client.py  module_manager.py  schemas.py  user.py  utils.py
node/compose-files/vllm-models/: DeepHermes-3-Llama-3-8B-Preview.yml
node/inference/litellm/: generate_litellm_config.py  pyproject.toml
node/mcp/: pyproject.toml  server.py
node/mcp/naptha_mcp/: client.py
node/mpc/: pyproject.toml  server.py
node/server/: grpc_server.py  grpc_server_pb2_grpc.py  http_server.py  server.py  ws_server.py
node/server/protos/: README.md  grpc_server.proto
node/storage/: server.py  utils.py
node/storage/db/: db.py  init_db.py  reset_db.py
node/storage/hub/: hub.py  init_hub.py
node/storage/hub/data_structures/: api_secrets.surql  testdata.surql
node/worker/: docker_worker.py  main.py  package_worker.py  utils.py
