[project]
name = "node"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [ "aiofiles>=23.2.1", "pydantic>=2.5.3", "uvicorn>=0.22.0,<0.23.0", "fastapi>=0.111.0,<0.112.0", "python-multipart>=0.0.6", "python-dotenv>=1.0.0", "httpx>=0.27.0", "backoff>=2.2.1", "docker>=7.0.0", "celery>=5.4.0", "redis>=5.0.1", "surrealdb==0.3.2", "pyjwt>=2.8.0", "psutil>=5.9.7", "pytz>=2024.1", "gitpython>=3.1.40", "poetry-core>=1.8.1", "poetry>=1.7.1", "setuptools>=69.0.3", "pyyaml>=6.0.1", "protobuf>=5.26.1", "ecdsa>=0.19.0", "ipfshttpclient>=0.7.0", "grpcio>=1.66.2", "grpcio-tools>=1.66.2", "charset-normalizer==3.3.2", "sqlalchemy>=2.0.36", "alembic>=1.13.3", "aiohttp>=3.11.9", "psycopg2>=2.9.10", "cryptography>=42.0.5,<43.0.0", "litellm[proxy]==1.54.0", "uv>=0.6.5",]

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "ruff>=0.1.11", "ipykernel>=6.29.2",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "node*",]
