[project]
name = "naptha-mcp"
version = "0.1.0"
description = "A naptha mcp server for naptha node"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "mcp",
    "httpx>=0.27",
    "anyio>=4.5",
    "naptha-sdk"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git" }
